# drake-franka-setup

./: .gitignore  .gitmodules  pyproject.toml  pyrightconfig.json
drake_franka_setup/hardware_interface/: franka_lcm_interface.py  franka_params.py
drake_franka_setup/planning/: franka_collision_free_ik.py  utils.py
tools/: build_deps.sh
